package com.japhy.basic.demo;

import java.util.List;

/**
 * @author Japhy
 * @since 2022/8/15 16:59
 */
public interface RankAlg {

    void rank(List<Rankable> rankableList);

}
