package com.japhy.basic.demo;

/**
 * @author Japhy
 * @since 2022/8/15 16:39
 */
public interface Rankable {

    int getRank();

    int getEqualRank();

    int getRankItem();

    void setRank(int rank);

    void setEqualRank(int rank);

}
