@startuml
'https://plantuml.com/class-diagram

interface Rankable {
    + getRank(): int
    + setRank()
    + getEqualRank(): int
    + setEqualRank()
    + getRankItem(): int
}

interface RankAlg {

    + rank(List<Rankable> rankableList)
}

RankAlg ..> Rankable

class EqualRankAlg {
    +rank(List<Rankable> rankableList)
}

EqualRankAlg ..|> RankAlg

@enduml